deploy: acea79c1a15f17a82f409af51c7962f6deeb6d48

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1754660905105" data-listing-reading-time-sort="1" data-listing-word-count-sort="8">
+<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1754661519244" data-listing-reading-time-sort="1" data-listing-word-count-sort="8">
 <div class="thumbnail"><a href="./posts/category-diffusion.html" class="no-external">
 
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -267,7 +267,7 @@ window.Quarto = {
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1754611200000" data-listing-file-modified-sort="1754660905105" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1754611200000" data-listing-file-modified-sort="1754661519244" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="73">
 <div class="thumbnail"><a href="./posts/2025-08-08-diffusion-basics.html" class="no-external">
 
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -278,7 +278,7 @@ window.Quarto = {
 <a href="./posts/2025-08-08-diffusion-basics.html" class="no-external">Diffusion model basics</a>
 </h3>
 <div class="delink listing-description"><a href="./posts/2025-08-08-diffusion-basics.html" class="no-external">
-논문 요약 작성 예시입니다.
+Diffusion model의 시초는 Sohl-Dickstein의 Deep Unsupervised Learning using Nonequilibrium Thermodynamics, ICML 2015. 이후 Yang Song의 Score matching 논문 (Generative Modeling by…
 </a></div>
 </div>
 <div class="metadata">
@@ -289,7 +289,7 @@ Aug 8, 2025
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1754611200000" data-listing-file-modified-sort="1754660905105" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1754611200000" data-listing-file-modified-sort="1754661519244" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
 <div class="thumbnail"><a href="./posts/2025-08-08-first-post.html" class="no-external">
 
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
